--- a/index.html
+++ b/index.html
@@ -1,93 +1,105 @@
-<div class="header"><img class="icon" src="https://cdn04.pinkoi.com/pinkoi.site/general/logo/pinkoi_logo_2019.svg"
-        alt="" /></div>
-<link rel="stylesheet" href="/portfolio/guideline.css">
-<div class="content content_grey">
-    <div class="maxwidth">
-        <h5>style guideline</h5>
-        <h1>品牌網頁視覺引導-40px 大標題</h1>
-        <h1 class="small_english">English style guideline for h1 Title</h1>
-        <div class="title_hr"></div><br />
-        <h2>品牌網頁視覺引導-30px 中標題</h2>
-        <h2 class="small_english">English style guideline for h2 Title</h2><br />
-        <h3>品牌網頁視覺引導-20px 小標題</h3>
-        <h3 class="small_english">English style guideline for h3 Title</h3><br />
-        <hr />
-        <h5>VI COLORS</h5>
-        <div class="colorchip">
-            <div class="color_tag">#013353</div>
-            <div class="color_block color_block_blue"></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pinkoi</title>
+    <link rel="stylesheet" href="/portfolio/guideline.css">
+</head>
+<body>
+    <div class="header"><img class="icon" src="https://cdn04.pinkoi.com/pinkoi.site/general/logo/pinkoi_logo_2019.svg"
+            alt="" /></div>
+    <div class="content content_grey">
+        <div class="maxwidth">
+            <h5>style guideline</h5>
+            <h1>品牌網頁視覺引導-40px 大標題</h1>
+            <h1 class="small_english">English style guideline for h1 Title</h1>
+            <div class="title_hr"></div><br />
+            <h2>品牌網頁視覺引導-30px 中標題</h2>
+            <h2 class="small_english">English style guideline for h2 Title</h2><br />
+            <h3>品牌網頁視覺引導-20px 小標題</h3>
+            <h3 class="small_english">English style guideline for h3 Title</h3><br />
+            <hr />
+            <h5>VI COLORS</h5>
+            <div class="colorchip">
+                <div class="color_tag">#013353</div>
+                <div class="color_block color_block_blue"></div>
+            </div>
+            <div class="colorchip">
+                <div class="color_tag">#EE837D</div>
+                <div class="color_block color_block_pink"></div>
+            </div>
+            <div class="colorchip">
+                <div class="color_tag">#FFFFFF</div>
+                <div class="color_block color_block_grey"></div>
+            </div>
+            <h5>BUTTON EXAMPLE</h5>
+            <div class="button">按鈕範例</div>
+            <div class="button button_blue">按鈕範例</div>
+            <div class="button button_pink">按鈕範例</div>
         </div>
-        <div class="colorchip">
-            <div class="color_tag">#EE837D</div>
-            <div class="color_block color_block_pink"></div>
-        </div>
-        <div class="colorchip">
-            <div class="color_tag">#FFFFFF</div>
-            <div class="color_block color_block_grey"></div>
-        </div>
-        <h5>BUTTON EXAMPLE</h5>
-        <div class="button">按鈕範例</div>
-        <div class="button button_blue">按鈕範例</div>
-        <div class="button button_pink">按鈕範例</div>
     </div>
-</div>
-<div class="content content_blue">
-    <div class="maxwidth">
-        <h5>style guideline</h5>
-        <h1>品牌網頁視覺引導-40px 大標題</h1>
-        <h1 class="small_english">English style guideline for h1 Title</h1>
-        <div class="title_hr"></div><br />
-        <h2>品牌網頁視覺引導-30px 中標題</h2>
-        <h2 class="small_english">English style guideline for h2 Title</h2><br />
-        <h3>品牌網頁視覺引導-20px 小標題</h3>
-        <h3 class="small_english">English style guideline for h3 Title</h3><br />
-        <hr />
-        <h5>VI COLORS</h5>
-        <div class="colorchip">
-            <div class="color_tag">#013353</div>
-            <div class="color_block color_block_blue"></div>
+    <div class="content content_blue">
+        <div class="maxwidth">
+            <h5>style guideline</h5>
+            <h1>品牌網頁視覺引導-40px 大標題</h1>
+            <h1 class="small_english">English style guideline for h1 Title</h1>
+            <div class="title_hr"></div><br />
+            <h2>品牌網頁視覺引導-30px 中標題</h2>
+            <h2 class="small_english">English style guideline for h2 Title</h2><br />
+            <h3>品牌網頁視覺引導-20px 小標題</h3>
+            <h3 class="small_english">English style guideline for h3 Title</h3><br />
+            <hr />
+            <h5>VI COLORS</h5>
+            <div class="colorchip">
+                <div class="color_tag">#013353</div>
+                <div class="color_block color_block_blue"></div>
+            </div>
+            <div class="colorchip">
+                <div class="color_tag">#EE837D</div>
+                <div class="color_block color_block_pink"></div>
+            </div>
+            <div class="colorchip">
+                <div class="color_tag">#FFFFFF</div>
+                <div class="color_block color_block_grey"></div>
+            </div>
+            <h5>BUTTON EXAMPLE</h5>
+            <div class="button button_blue">按鈕範例</div>
+            <div class="button button_pink">按鈕範例</div>
+            <div class="button">按鈕範例</div>
         </div>
-        <div class="colorchip">
-            <div class="color_tag">#EE837D</div>
-            <div class="color_block color_block_pink"></div>
-        </div>
-        <div class="colorchip">
-            <div class="color_tag">#FFFFFF</div>
-            <div class="color_block color_block_grey"></div>
-        </div>
-        <h5>BUTTON EXAMPLE</h5>
-        <div class="button button_blue">按鈕範例</div>
-        <div class="button button_pink">按鈕範例</div>
-        <div class="button">按鈕範例</div>
     </div>
-</div>
-<div class="content content_yellow">
-    <div class="maxwidth">
-        <h5>style guideline</h5>
-        <h1>品牌網頁視覺引導-40px 大標題</h1>
-        <h1 class="small_english">English style guideline for h1 Title</h1>
-        <div class="title_hr"></div><br />
-        <h2>品牌網頁視覺引導-30px 中標題</h2>
-        <h2 class="small_english">English style guideline for h2 Title</h2><br />
-        <h3>品牌網頁視覺引導-20px 小標題</h3>
-        <h3 class="small_english">English style guideline for h3 Title</h3><br />
-        <hr />
-        <h5>VI COLORS</h5>
-        <div class="colorchip">
-            <div class="color_tag">#FFFFFF</div>
-            <div class="color_block color_block_grey"></div>
+    <div class="content content_yellow">
+        <div class="maxwidth">
+            <h5>style guideline</h5>
+            <h1>品牌網頁視覺引導-40px 大標題</h1>
+            <h1 class="small_english">English style guideline for h1 Title</h1>
+            <div class="title_hr"></div><br />
+            <h2>品牌網頁視覺引導-30px 中標題</h2>
+            <h2 class="small_english">English style guideline for h2 Title</h2><br />
+            <h3>品牌網頁視覺引導-20px 小標題</h3>
+            <h3 class="small_english">English style guideline for h3 Title</h3><br />
+            <hr />
+            <h5>VI COLORS</h5>
+            <div class="colorchip">
+                <div class="color_tag">#FFFFFF</div>
+                <div class="color_block color_block_grey"></div>
+            </div>
+            <div class="colorchip">
+                <div class="color_tag">#013353</div>
+                <div class="color_block color_block_blue"></div>
+            </div>
+            <div class="colorchip">
+                <div class="color_tag">#2E90B7</div>
+                <div class="color_block color_block_green"></div>
+            </div>
+            <h5>BUTTON EXAMPLE</h5>
+            <div class="button">按鈕範例</div>
+            <div class="button button_blue">按鈕範例</div>
+            <div class="button button_green">按鈕範例</div>
         </div>
-        <div class="colorchip">
-            <div class="color_tag">#013353</div>
-            <div class="color_block color_block_blue"></div>
-        </div>
-        <div class="colorchip">
-            <div class="color_tag">#2E90B7</div>
-            <div class="color_block color_block_green"></div>
-        </div>
-        <h5>BUTTON EXAMPLE</h5>
-        <div class="button">按鈕範例</div>
-        <div class="button button_blue">按鈕範例</div>
-        <div class="button button_green">按鈕範例</div>
     </div>
-</div>
+</body>
+</html>
+
+
