--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pinkoi</title>
-    <link rel="stylesheet" href="/portfolio/guideline.css">
+    <link rel="stylesheet" href="/guideline.css">
 </head>
 <body>
     <div class="header"><img class="icon" src="https://cdn04.pinkoi.com/pinkoi.site/general/logo/pinkoi_logo_2019.svg"
