--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pinkoi</title>
+    <title>Porfolio</title>
     <link rel="stylesheet" href="/guideline.css">
 </head>
 <body>
@@ -98,7 +98,117 @@
             <div class="button button_blue">按鈕範例</div>
             <div class="button button_green">按鈕範例</div>
         </div>
+
     </div>
+    <!-- weather box -->
+    <div class="title">WEATHER BOX</div>
+    <div class="bg-body">
+        <img class="boxleft" src="origin_excisize.png" alt="" srcset="">
+    <div class="daybox">        
+  <label>
+    <input id="switch_night" type="checkbox"/>
+    <div class="top">
+      <svg class="temsvg">
+        <text x="0" y="100">26°</text>
+        <circle cx="0" cy="100" r="3"></circle>
+        <text x="70" y="80">27°</text>
+        <circle cx="70" cy="80" r="3"></circle>
+        <text x="140" y="60">28°</text>
+        <circle cx="140" cy="60" r="3"></circle>
+        <text x="210" y="70">27.8°</text>
+        <circle cx="210" cy="70" r="3"></circle>
+        <text x="280" y="100">26.3°</text>
+        <circle cx="280" cy="100" r="3"></circle>
+        <text x="350" y="110">26°</text>
+        <circle cx="350" cy="110" r="3"></circle>
+        <text x="420" y="80">25.8°</text>
+        <circle cx="420" cy="80" r="3"></circle>
+        <circle cx="560" cy="560" r="3"></circle>
+        <polyline points="0,100 70,80 140,60 210,70 280,100 350,110 420,80 490,90"></polyline>
+      </svg>
+      <div class="text_area">
+        <div class="temperature">26°C</div>
+        <div class="infos">
+          <div class="address">新竹市香山區茄苳里</div>
+          <div class="time">星期三 上午4:00</div>
+        </div>
+      </div>
+      <div class="moon"></div>
+      <div class="cloud">
+        <div class="rain"></div>
+        <div class="rain rain2"></div>
+        <div class="rain rain3"></div>
+      </div>
+    </div>
+    <div class="bottom">
+      <div class="dayweather">
+        <h3>MON</h3>
+        <svg viewbox="-50 -50 100 100">
+          <circle class="sun" cx="0" cy="0" r="22"></circle>
+        </svg>
+      </div>
+      <div class="dayweather">
+        <h3>TUE</h3>
+        <svg viewBox="-50 -50 100 100">
+          <line class="rain" x1="-25" y1="25" x2="-25" y2="45"></line>
+          <line class="rain" x1="-14" y1="10" x2="-14" y2="30"></line>
+          <line class="rain" x1="-5" y1="15" x2="-5" y2="35"></line>
+          <circle class="sun" cx="0" cy="0" r="22"></circle>
+          <circle class="cloud" cx="-30" cy="30" r="20"></circle>
+          <circle class="cloud" cx="-25" cy="20" r="15"></circle>
+          <circle class="cloud" cx="-7" cy="30" r="15"></circle>
+        </svg>
+      </div>
+      <div class="dayweather">
+        <h3>WED</h3>
+        <svg viewbox="-50 -50 100 100">
+          <circle class="sun" cx="0" cy="0" r="22"></circle>
+        </svg>
+      </div>
+      <div class="dayweather">
+        <h3>THU</h3>
+        <svg viewbox="-50 -50 100 100">
+          <circle class="sun" cx="0" cy="0" r="22"></circle>
+          <circle class="cloud" cx="-30" cy="30" r="20"></circle>
+          <circle class="cloud" cx="-15" cy="30" r="20"></circle>
+          <circle class="cloud" cx="0" cy="30" r="20"></circle>
+          <circle class="cloud" cx="-25" cy="10" r="15"></circle>
+          <circle class="cloud" cx="-7" cy="15" r="15"></circle>
+        </svg>
+      </div>
+      <div class="dayweather">
+        <h3>FRI</h3>
+        <svg viewbox="-50 -50 100 100">
+          <circle class="sun" cx="0" cy="0" r="22"></circle>
+        </svg>
+      </div>
+      <div class="dayweather">
+        <h3>SAT</h3>
+        <svg viewbox="-63 -40 100 100">
+          <circle class="cloud" cx="-30" cy="30" r="20"></circle>
+          <circle class="cloud" cx="-15" cy="30" r="20"></circle>
+          <circle class="cloud" cx="0" cy="30" r="20"></circle>
+          <circle class="cloud" cx="-25" cy="10" r="15"></circle>
+          <circle class="cloud" cx="-7" cy="15" r="15"></circle>
+        </svg>
+      </div>
+      <div class="dayweather">
+        <h3>SUN</h3>
+        <svg viewbox="-63 -40 100 100">
+          <line class="rain" x1="-25" y1="15" x2="-25" y2="35"></line>
+          <line class="rain" x1="-14" y1="5" x2="-14" y2="25"></line>
+          <line class="rain" x1="-5" y1="20" x2="-5" y2="45"></line>
+          <circle class="cloud" cx="-30" cy="30" r="20"></circle>
+          <circle class="cloud" cx="-15" cy="30" r="20"></circle>
+          <circle class="cloud" cx="0" cy="30" r="20"></circle>
+          <circle class="cloud" cx="-25" cy="10" r="15"></circle>
+          <circle class="cloud" cx="-7" cy="15" r="15"></circle>
+        </svg>
+      </div>
+    </div>
+  </label>
+    </div>
+    </div> 
 </body>
 </html>
 
