add piano profolio

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Porfolio</title>
     <link rel="stylesheet" href="/guideline.css">
+    <link rel="icon" href="codeimg.ico" type="image/x-icon" >
 </head>
 <body>
+    <div class="title">品牌識別</div>
     <div class="header"><img class="icon" src="https://cdn04.pinkoi.com/pinkoi.site/general/logo/pinkoi_logo_2019.svg"
             alt="" /></div>
     <div class="content content_grey">
@@ -209,6 +211,17 @@
   </label>
     </div>
     </div> 
+
+    <div class="title">VUE.JS PROJECT</div>
+    <div class="codeembed">
+<p class="codepen" data-height="450" data-default-tab="html,result" data-slug-hash="zYMaPvj" data-user="vneverz" style="height: 450px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+  <span>See the Pen <a href="https://codepen.io/vneverz/pen/zYMaPvj">
+  Untitled</a> by Doran Wu (<a href="https://codepen.io/vneverz">@vneverz</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+</p>
+<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+    </div>
+    
 </body>
 </html>
 
