--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Porfolio</title>
-    <link rel="stylesheet" href="/guideline.css">
+    <link rel="stylesheet" href="guideline.css">
     <link rel="icon" href="codeimg.ico" type="image/x-icon" >
 </head>
 <body>
